temp fix for left shift on main page

--- a/client/index.css
+++ b/client/index.css
@@ -22,6 +22,9 @@ span.date-time
 
 .page-content
 {
+    position: fixed;
+    top: calc( 0 + var(--navbar-height));
+    left: 0;
     height: calc( 100vh - var(--navbar-height) );
     display: flex;
 }
@@ -131,7 +134,7 @@ div#login-popup
     visibility: visible;
     position: fixed;
     z-index: 9999;
-    top: 0;
+    top: var(--navbar-height);
     left: 0;
     width: 100%;
     height: 100%;
